# bazel_playground

./: README.md  WORKSPACE.bazel  package-lock.json  package.json
